<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:orientation="vertical"
        android:text="@string/profile" />
    <TextView
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:orientation="vertical"
        android:text="@string/name" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nameE" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:orientation="vertical"
        android:text="@string/emailA" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enterE" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:orientation="vertical"
        android:text="@string/picture" />

    <ImageButton
        android:id="@+id/squareButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:src="@android:drawable/picture_frame"/>

    <TextView
        android:layout_width="400dp"
        android:layout_height="35dp"
        android:orientation="vertical"
        android:text="@string/click1" />
    <Button
        android:id="@+id/chat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/chat" />

</LinearLayout>