<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/look"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv"
        android:text="@string/click" />

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_toEndOf="@+id/button"
        android:layout_below="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check" />

    <ImageButton
        android:id="@+id/flag"
        android:layout_below="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/flag" />

    <Switch
        android:id="@+id/switch1"
        android:layout_below="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/flag"
        android:layout_alignParentEnd="true"
        android:text="@string/onoff" />

    <EditText
        android:id="@+id/input"
        android:layout_below="@+id/flag"
        android:hint="@string/typehere"
        android:inputType="textPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>