<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:rowCount="4"
    android:columnCount="2"
    android:layout_height="match_parent">

    <TextView
        android:layout_columnSpan="2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/look"
        android:textSize="30sp"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_columnSpan="1"
        android:text="@string/click" />

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:gravity="fill"
        android:layout_columnSpan="1"
        android:text="@string/check" />


    <ImageButton
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="fill"
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:src="@drawable/flag" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_columnSpan="1"
        android:text="@string/onoff" />

    <EditText
        android:id="@+id/input"
        android:hint="@string/typehere"
        android:inputType="textPersonName"
        android:layout_width="match_parent"
        android:gravity="fill"
        android:layout_columnSpan="2"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content" />


</GridLayout>