<?xml version="1.0" encoding="utf-8"?>

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:rowCount="4"
    android:columnCount="2"
    android:layout_height="match_parent"
    >

    <ImageView
        android:layout_columnSpan="2"
        android:id="@+id/currentWeather"
        android:layout_width="200dp"
        android:layout_height="200dp" />

    <TextView
        android:id="@+id/currentWeather2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:text="0 Celsius"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:text="@string/current" />
    <TextView
        android:id="@+id/minWeather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0 Celsius"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:text="@string/min" />
    <TextView
        android:id="@+id/maxWeather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0 Celsius" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:text="@string/max" />

    <TextView
        android:id="@+id/uvRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:text="@string/uv" />


    <ProgressBar
        android:layout_columnSpan="2"
        android:id="@+id/simpleProgressBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleHorizontal"/>


</GridLayout>